@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-20T08:10:43Z",
+  "timestamp" : "2022-08-21T16:10:01Z",
   "count_outdated" : 1805,
   "uniques_outdated" : 127,
-  "count" : 1908,
+  "count" : 1896,
   "uniques" : 135,
   "views" : [
     {
       "timestamp": "2022-08-07T00:00:00Z",
-      "count": 34,
+      "count": 22,
       "count_minmax": [ 12, 34 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
