@@ -1,10 +1,10 @@
 {
-  "count": 103,
+  "count": 91,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-08-07T00:00:00Z",
-      "count": 34,
+      "count": 22,
       "uniques": 1
     },
     {
