@@ -1,3 +1,10 @@
+2022-08-21T16:10:01Z:
+* notice: last 14d: unq all: 2 91
+* notice: prev accum: outdated-unq outdated-all / unq all: 127 1805 / 135 1908
+* notice: next accum: outdated-unq outdated-all / unq all: 127 1805 / 135 1896
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -12 / +1 +34 -0 -12 / 1 22
+* notice: removed / changed dates: [] / [2022-08-07]
+
 2022-08-20T08:10:43Z:
 * notice: last 14d: unq all: 2 103
 * notice: prev accum: outdated-unq outdated-all / unq all: 126 1804 / 135 1908
